styles.css
* {
    margin: 0px;
    padding: 0px;
    font-family: "Roboto Mono", monospace;
    font-optical-sizing: auto;
    font-size: 14px;
}

body {
    background-color: black;
    color: white;
    display: grid;
    grid-template-rows: min-content 1fr;
    grid-template-columns: 1fr 4fr 1fr;
    height: 100vh;
    max-height: 100%;
}

body::before {
    content: "";
    background-image: url(images/glare-small.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center top;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 0.5;
    z-index: -1;
}

#header {
    margin: 10px;
    grid-column: 1 / 4;
    grid-row: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

#header-img {
    max-width: 45%;
    filter: drop-shadow(0px 0px 3px white);
}

#sidebar {
    grid-column: 1;
    grid-row: 2;
    padding: 10px;
    justify-self: center;
    display: flex;
    flex-direction: column;
}

#sidebar-header {
    margin-bottom: 10px;
    filter: drop-shadow(0 0 2px rgb(255, 255, 255));
}

#nyc {
    font-weight: 300;
}

.sidebar-links {
    color: rgb(12, 106, 50);
}

a.sidebar-links {
    text-decoration: underline;
    display: block;
}

#bottom-sidebar-text {
    margin-top: auto;
    font-size: 10px;
    filter: drop-shadow(0 0 2px rgb(255, 255, 255));
}

#main-content {
    grid-column: 1/3;
    grid-row: 2;
    justify-self: center;
    padding: 10px;
    margin: auto;
}

#discog-container > p{
    font-size: 10px;
    filter: drop-shadow(0 0 2px rgba(255, 255, 255, 0.543));
}

#album-art-grid {
    margin: 10px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    gap: 20px;
}

.album-art-card {
    width: 200px;
}

.album-art-card > img {
    width: 100%;
    height: auto;
}

@media (min-width: 700px) {
    #main-content {
        grid-column: 2;
    }
}

